# Beemo

./: .gitignore  CMakeLists.txt  DEMO.md  README.md  TODO.md  hot_spot.sh
ev/include/ev/: evloop.h
http/: CMakeLists.txt  Design.md  notes.md
http/gperf/: gen_http_keyword_map.sh  http_keyword_hash.gperf
http/include/: http_req.h
http/include/http/: config.h  conn.h  conn_ctx.h  connection.h  encoding.h  err.h  error.h  headers.h  http_encoding.h  http_err.h  http_keyword_map.h  http_method.h  http_parser.h  http_semantics.h  keyword_map.h  msg.h  msg_constants.h  parser.h  pool.h  req_parser.h  req_worker.h  routing.h  server.h
http/scripts/: stress.py
http/src/: conn.cpp  encoding.cpp  err.cpp  http_encoding.cpp  http_err.cpp  http_method.cpp  http_parser.cpp  http_semantics.cpp  main.cpp  msg.cpp  parser.cpp  pool.cpp  req_parser.cpp  req_worker.cpp  routing.cpp  server.cpp
http/test/: main.cpp  test_client.py  test_http.cpp  test_lexer.cpp  test_server.cpp  test_setup.sh
httparser/: CMakeLists.txt
httparser/gperf/: gen_http_keyword_map.sh  http_keyword_hash.gperf
httparser/include/: http_parser.h  http_req.h
httparser/include/httparser/: http_error.h  http_keyword_map.h  http_parser.h  http_req.h  parse_error.h
httparser/src/: http_parser.cpp  main.cpp
httparser/test/: test_http.cpp  test_lexer.cpp  test_parser.cpp
httpserver/: CMakeLists.txt
httpserver/include/httpserver/: req_handler.h  req_worker.h  server.h  threadpool.h
httpserver/src/: main.cpp  req_handler.cpp  req_worker.cpp  server.cpp  threadpool.cpp
linux/: acceptor.cpp  ev_epoll.cpp  io_buf.cpp  socket.cpp
sockpp/: CMakeLists.txt  Notes.md  README.md
sockpp/include/: acceptor.h  socket.h
sockpp/include/sockpp/: acceptor.h  conn_ctx.h  io_ctx.h  io_queue.h  platform.h  socket.h
sockpp/src/: acceptor.cpp  socket.cpp
sockpp/src/linux/: acceptor.cpp  io_ctx.cpp  io_queue.cpp  socket.cpp
sockpp/src/win/: acceptor.cpp  io_ctx.cpp  io_queue.cpp  io_queue.h  socket.cpp
sockpp/test/: test.cpp  test_socket.sh
threadpool/: CMakeLists.txt
threadpool/include/threadpool/: pool.h
threadpool/src/: pool.cpp
transport/: CMakeLists.txt  Notes.md
transport/include/transport/: acceptor.h  config.h  conn_ctx.h  err.h  io_buf.h  io_ctx.h  platform.h  server.h  socket.h
transport/src/: socket.cpp
transport/src/linux/: acceptor.cpp  conn_ctx.cpp  epoll_ctx.cpp  epoll_ctx.h  io_ctx.cpp  linux_conn.cpp  linux_conn.h  server.cpp  socket.cpp
transport/src/win/: acceptor.cpp  conn_ctx.cpp  io_ctx.cpp  server.cpp  socket.cpp  win_conn.cpp  win_conn.h
transport/test/: test.cpp  test_socket.sh
uri/: CMakeLists.txt
uri/include/uri/: parser.h  uri.h  uri_error.h  uri_parser.h
uri/src/: main.cpp  parser.cpp  uri.cpp  uri_parser.cpp
uri/test/: main.cpp  test_uri.cpp
uriparser/: CMakeLists.txt
uriparser/include/uriparser/: uri.h
uriparser/src/: main.cpp  uri.cpp
uriparser/test/: test_uri.cpp
utils/: CMakeLists.txt
utils/include/utils/: config_reader.h  parsing.h  terminal_art.h  timeout.h  timeout_err.h
utils/src/: parsing.cpp
windows/: acceptor.cpp  ev_iocp.cpp  io_buf.cpp  socket.cpp
